--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -11,11 +11,11 @@
         {% include 'index/about.html' %}
     {% endif %}
 
-    <!-- {% include "inmueble/inmueble_list.html" %} -->
-    <!-- {% include "empresa/empresa_list.html" %} -->
-    <!-- {% include "oferta/oferta_list.html" %} -->
-    <!-- {% include "evento/evento_list.html" %} -->
-    <!-- {% include "producto/producto_list.html" %} -->
+    {% include "inmueble/inmueble_list.html" %}
+    {% include "empresa/empresa_list.html" %}
+    {% include "oferta/oferta_list.html" %}
+    {% include "evento/evento_list.html" %}
+    {% include "producto/producto_list.html" %}
 
     {% for message in messages %}
         {% if 'error' in message.tags %}
@@ -35,3 +35,4 @@
     <script src="{% static 'js/homepage.js' %}"></script>
 
 {% endblock %}
+
