--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
         {% endif %}
         </div>
 
-        {% include 'index/nav.html' %}
+        <!-- {% include 'index/nav.html' %} -->
             {% block content %}
 
             {% endblock %}
@@ -56,4 +56,5 @@
         });
     </script>
 </body>
+
 </html>
