--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
 
             {% endblock %}
 
-        <!-- {% include 'index/footer.html' %} -->
+        {% include 'index/footer.html' %}
 
     </div>
 
@@ -58,4 +58,5 @@
 </body>
 
 </html>
+
 
