--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -5,17 +5,17 @@
 {% block content %}
 
 
-    {% include 'index/hero.html' %}
+    <!-- {% include 'index/hero.html' %} -->
 
     {% if not user.is_authenticated %}
-        {% include 'index/about.html' %}
+        <!-- {% include 'index/about.html' %} -->
     {% endif %}
 
-    {% include "inmueble/inmueble_list.html" %}
+    <!-- {% include "inmueble/inmueble_list.html" %}
     {% include "empresa/empresa_list.html" %}
     {% include "oferta/oferta_list.html" %}
     {% include "evento/evento_list.html" %}
-    {% include "producto/producto_list.html" %}
+    {% include "producto/producto_list.html" %} -->
 
     {% for message in messages %}
         {% if 'error' in message.tags %}
@@ -35,4 +35,5 @@
     <script src="{% static 'js/homepage.js' %}"></script>
 
 {% endblock %}
+
 
